--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
 }
 hr {
   margin: 0 auto 45px;
-  opacity: 0.2;
+  opacity: 0.5;
 }
 section {
   margin: 0 auto 45px;
@@ -107,7 +107,7 @@ h3 {
     max-width: 1024px;
   }
 }
-/* --------- Personal Information */
+/* --------- Section 01 */
 @media (min-width: 768px) {
   .personal {
     display: flex;
@@ -116,7 +116,7 @@ h3 {
 }
 @media (min-width: 1024px) {
   .personal {
-    gap: 90px;
+    gap: 0px;
   }
 }
 .personal li {
@@ -126,30 +126,37 @@ h3 {
   display: inline-block;
   width: 55%;
 }
-.personal li span {
-  display: inline-block;
-  width: 45%;
-}
 @media (min-width: 640px) {
   .personal li b {
     width: 220px;
-  }
-  .personal li span {
-    width: auto;
   }
 }
 @media (min-width: 768px) {
   .personal li b {
     width: 150px;
   }
-  .personal li span {
-    width: 210px;
-  }
 }
 @media (min-width: 1024px) {
   .personal li b {
     width: 200px;
   }
+}
+.personal li span {
+  display: inline-block;
+  width: 45%;
+  word-wrap: break-word;
+}
+@media (min-width: 640px) {
+  .personal li span {
+    width: auto;
+  }
+}
+@media (min-width: 768px) {
+  .personal li span {
+    width: 210px;
+  }
+}
+@media (min-width: 1024px) {
   .personal li span {
     width: 300px;
   }
@@ -182,32 +189,43 @@ h3 {
     gap: 70px;
   }
 }
-/* --------- Projects */
+/* --------- Section 02 */
 .projects ul {
   display: grid;
   grid-template-columns: 1fr;
   justify-content: center;
-  gap: 24px;
+  row-gap: 24px;
   margin: 0 auto;
+}
+.projects li,
+.projects p,
+.projects span {
+  word-wrap: break-word;
 }
 @media (min-width: 640px) {
   .projects ul {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 300px 300px;
     row-gap: 24px;
     column-gap: 24px;
   }
 }
 @media (min-width: 768px) {
   .projects ul {
+    grid-template-columns: 350px 350px;
     row-gap: 30px;
     column-gap: 42px;
   }
 }
 @media (min-width: 1024px) {
   .projects ul {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 310px 310px 310px;
     row-gap: 30px;
-    column-gap: 90px;
+    column-gap: 35px;
+  }
+}
+@media (min-width: 1024px) {
+  .projects .github {
+    font-size: 0.85rem;
   }
 }
 /* --------- Education */
